--- a/bestillinger.html
+++ b/bestillinger.html
@@ -272,5 +272,6 @@
     </footer>
     </div>
     <script src="javascript/login.js"></script>
+    <script src="javascript/burgermenu.js"></script>
   </body>
 </html>
