--- a/kontakt.html
+++ b/kontakt.html
@@ -188,5 +188,6 @@
         </div>
       </footer>
       <script src="javascript/login.js"></script>
+      <script src="javascript/burgermenu.js"></script>
   </body>
 </html>
