--- a/om_bagt.html
+++ b/om_bagt.html
@@ -207,5 +207,6 @@
       </div>
     </footer>
     <script src="javascript/login.js"></script>
+    <script src="javascript/burgermenu.js"></script>
   </body>
 </html>
