--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,8 @@
         <div class="logo">
           <a href="index.html"><img src="logo.svg" alt="logo"></a>
         </div>
-        <nav>
+        <nav class="main-menu">
+          <button class="toggle-btn burger"></button>
           <ul>
             <li><a href="bestillinger.html">Bestillinger</a></li>
             <li><a href="om_bagt.html">Om Bagt</a></li>
