--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </section>
       <section>
-        <h2>· Vores åbningstider ·</h2>
+        <h2>· Vores butikker ·</h2>
         <div class="gallery">
           <div class="container">
             <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
