body font fjern

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="grid_1-2">
           <img src="img/femitems.webp" alt="billede" />
           <div>
-            <h2>· Lidt om os ·</h2>
+            <h2>Lidt om os</h2>
             <p>
               Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster
               en autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
@@ -49,7 +49,7 @@
         </div>
       </section>
       <section>
-        <h2>· Vores butikker ·</h2>
+        <h2>Vores butikker</h2>
         <div class="gallery">
           <div class="container">
             <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
