--- a/om_bagt.html
+++ b/om_bagt.html
@@ -53,7 +53,7 @@
         være den samme - At skabe bagværk af kvalitet med inspiration fra
         Frankrig.
       </p></div>
-      <section class="full">
+      <section class="full pink">
         <div>
           <br>
           <p>
@@ -90,7 +90,7 @@
         <br />
         <img class="billede1" src="img/om/mel.jpg" alt="" />
         <div class="overskrift">
-          <h1>Vores værdier</h1>
+          <h3>Vores værdier</h3>
         </div>
   
         <section class="full roed">
