--- a/bestillinger.html
+++ b/bestillinger.html
@@ -243,35 +243,39 @@
         </div>
       </section>
     </main>
-    <footer class="grid_1_1_1_1">
-      <div class="box">
-        <h5>Kontakt</h5>
-        <a href="kontakt.html#link_footer">Mail</a>
-        <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
-        <a href="kontakt.html#link_footer4">Butikker</a>
-      </div>
-      <div class="box">
-        <h5>Sociale Medier</h5>
-        <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
-        <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
-        <a
-          href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
-          class="linkedin"
-          >LinkedIn</a
-        >
-      </div>
-      <div class="box">
-        <h5>Om Bagt</h5>
-        <p>Vores Historie</p>
-        <p>Værdier og visioner</p>
-      </div>
-      <div class="box">
-        <h5>Bestillinger</h5>
-        <a href="bestillinger.html#link_footer1">Specialbestillinger</a>
-        <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
-      </div>
-    </footer>
-    </div>
+    <section>
+      <footer class="grid_1_1_1_1">
+        <footer class="grid_1_1_1_1">
+          <div class="box">
+            <h5>Kontakt</h5>
+            <a href="kontakt.html#link_footer">Mail</a>
+            <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
+            <a href="kontakt.html#link_footer4">Butikker</a> 
+          </div>
+          <div class="box">
+            <h5>Sociale Medier</h5>
+            <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram"
+              >Instagram</a
+            >
+            <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
+            <a
+              href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
+              class="linkedin"
+              >LinkedIn</a
+            >
+          </div>
+          <div class="box">
+            <h5>Om Bagt</h5>
+            <p>Vores Historie</p>
+            <p>Værdier og visioner</p>
+          </div>
+          <div class="box">
+            <h5>Bestillinger</h5>
+            <a href="bestillinger.html#link_footer1">Specialbestillinger</a>
+            <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
+          </div>
+        </footer>
+    </section>
     <script src="javascript/login.js"></script>
     <script src="javascript/burgermenu.js"></script>
   </body>
