--- a/om_bagt.html
+++ b/om_bagt.html
@@ -28,9 +28,7 @@
     <main>
       <div class="overskrift">
       <h1 id="link_footer5">Vores historie</h1>
-      <div class="paragraf">
       <p>Franskinspireret boulangerie</p></div>
-      </div>
       <img class="billede1" src="img/bagtfacade.webp" alt="">
       <div class="paragraf">
       <p>
@@ -87,7 +85,6 @@
             tætte relationer til vores gæster.
           </p></div>
         </div>
-        <br />
         <img class="billede1" src="img/om/mel.jpg" alt="" />
         <div class="overskrift">
           <h3>Vores værdier</h3>
@@ -97,7 +94,7 @@
           <div class="grid_1-2">
               <img class="gridbillede" src="img/om/latteart.webp" alt="" />
             <div>
-              <h1>Kærlighed til Frankrig</h1>
+              <h1 class="vaerdier">Kærlighed til Frankrig</h1>
               <p>Bagt blev grundlagt med en drøm om at skabe et bagerunivers med et fransk præg. Indehaveren af Bagt har i mange år arbejdet i Paris, blandt andet i Maison du Danemark og Paul, hvor en stor del af inspirationen er opstået. </p>
               <p>Vi er et fransk bageri med danske rødder. Derfor vil du kunne finde flere referencer til det franske boulangerie hos Bagt blandt andet gennem vores sortiment og æstetik. </p>
               <p>Vi vil bringe Frankrig tættere på dig.</p>
@@ -107,7 +104,7 @@
         <section class="full roed">
           <div class="grid_2-1">
             <div>
-              <h1>Nærvær</h1>
+              <h1 class="vaerdier">Nærvær</h1>
 <p>Hos Bagt har vi altid hjertet med i vores handlinger. Vi elsker at give vores gæster en helt særlig oplevelse, når de besøger Bagt.
   Vi nyder hverdagssamtalerne med vores stamgæster om det store og små såvel som at introducere Bagt for helt nye gæster. Der er ikke noget bedre for os, end når vi kan give et smil med på vejen.</p>
   <p>Vores relation til vores gæster, værdsætter vi derfor utroligt højt.</p>
@@ -123,7 +120,7 @@
               <img class="gridbillede" src="img/om/kvalitet.webp" alt="" />
             </div>
             <div>
-<h1>Håndlavet kvalitet</h1>
+<h1 class="vaerdier">Håndlavet kvalitet</h1>
 <p>Hos Bagt sætter vi en dyd i at håndlave vores bagværk for at få et personligt præg uden at gå på kompromis med kvaliteten.
   Vi har signaturvarer som vores “moffebrød”, “Bagerens rugbrød” og “Croissant d’amande” som man kan kende os på.
   Alt vores bagværk og kager håndlaves til mindste detalje af bagere og konditorer, der brænder for deres værk.
@@ -134,7 +131,7 @@
         <section class="full roed">
           <div class="grid_2-1">
             <div>
-              <h1>Omtanke</h1>
+              <h1 class="vaerdier">Omtanke</h1>
               <p>Vi stræber efter minimalt spild og har derfor lanceret tiltaget: “Less is more”. I de henseender, der ikke kan forudsiges, har vi tilrettelag initiativer til at nedbringe vores madspild.
                 Hos Bagt kan man købe overskydende varer sidst på dagen til en fordelagtig pris.
                 Vi giver tips og tricks på vores sociale medier til, hvordan man kan give bagværk, der har mistet sin friskhed, nyt liv.
