--- a/kontakt.html
+++ b/kontakt.html
@@ -122,7 +122,7 @@
           <div class="boks_helligdag">
             <h3>helligdage</h3 >
             <div class="ps">
-              <p>Se åbningstider for hellligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
+              <p>Se åbningstider for helligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
             </div>
           </div>
         </div>
