--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         </div>
         <div class="box">
           <h5>Om Bagt</h5>
-          <p>Vores Historie</p>
-          <p>Værdier og visioner</p>
+          <a href="om_bagt.html#link_footer5">Vores Historie</a>
+          <a href="om_bagt.html#link_footer6">Værdier og visioner</a>
         </div>
         <div class="box">
           <h5>Bestillinger</h5>
