--- a/bestillinger.html
+++ b/bestillinger.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="minikager_1-1">
-              <h4 class="">Pinktsnitte</h4>
+              <h4 class="">Pinkysnitte</h4>
               <p class="">10 kr.</p>
             </div>
 
