--- a/bestillinger.html
+++ b/bestillinger.html
@@ -28,10 +28,14 @@
     <main>
       <img class="top_pic" src="img/bestilling.webp" alt="">
       <div class="top">
-        <h2>Kager</h2>
-        <p>Gør det nemt at holde fest og lade Bagt klare desserten.</p>
-        <h3>Mini Kager</h3>
-        <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p> 
+        <div class="top_1">
+          <h2>Kager</h2>
+          <p>Gør det nemt at holde fest og lade Bagt klare desserten.</p>
+        </div>
+        <div class="top_2">
+          <h3>Mini Kager</h3>
+          <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
+        </div>
       </div>
       <section class="full">
          
@@ -65,13 +69,8 @@
             </div>
 
             <div class="minikager_1-1">
-<<<<<<< HEAD
-              <h4 class="minikager_overskrift">Pinktsnitte</h4>
+              <h4 class="minikager_overskrift">Pinkysnitte</h4>
               <p class="pris_1">10 kr.</p>
-=======
-              <h4 class="">Pinkysnitte</h4>
-              <p class="">10 kr.</p>
->>>>>>> 62ee8ab041d4f23c796a543eeb0f20a16f1a30b3
             </div>
 
             <div class="minikager_1-1">
@@ -181,7 +180,7 @@
           <div>
             <h4 class="overskrift_storkage">Kagemand</h4>
             <p class="tekst_storkage">Laves på enten wienerbrød, brunsviger eller smørboller. 15 - 20 personer.</p>
-            <p class="pris_2">245 kr.</p>
+            <p class="pris_2_">245 kr.</p>
           </div>
         </section>
         
