--- a/bestillinger.html
+++ b/bestillinger.html
@@ -19,7 +19,7 @@
       <nav class="main-menu">
         <button class="toggle-btn burger"></button>
         <ul>
-          <li><a href="bestillinger.html">Bestillinger</a></li>
+          <li><a href="bestillinger.html"><strong>Bestillinger</strong></a></li>
           <li><a href="om_bagt.html">Om Bagt</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
