--- a/om_bagt.html
+++ b/om_bagt.html
@@ -20,7 +20,7 @@
         <button class="toggle-btn burger"></button>
         <ul>
           <li><a href="bestillinger.html">Bestillinger</a></li>
-          <li><a href="om_bagt.html">Om Bagt</a></li>
+          <li><a href="om_bagt.html"><strong>Om Bagt</strong></a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
