--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="bestillinger.html">Bestillinger</a></li>
             <li><a href="om_bagt.html">Om Bagt</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="kontakt.html"><strong>Kontakt</strong></a></li>
           </ul>
         </nav>
       </header>
@@ -119,8 +119,7 @@
         <div class="grid_job">
           <div class="boks_order">
             <h2>Bagt family</h2>
-            <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. </p>
-            <p> Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
+            <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
             <p> Du er altid velkommen til at sende en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
             <p> Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
             <p>Vi glæder os til at høre fra dig!</p>
