--- a/om_bagt.html
+++ b/om_bagt.html
@@ -38,6 +38,7 @@
         bagt. Alt sammen for at føre en drøm om et fransk bageri med danske
         rødder ud i livet.
       </p>
+      <br>
       <p>
         Vores signatur-brød er det gode, lyse moffebrød, som vi bager efter
         fransk metode med surdej, masser af vand og langtidshævning. Det giver
@@ -45,6 +46,7 @@
         er så sprød, at man kan høre den. Udtrykket er enkelt og rustikt - og
         man får mel på fingrene, når man går hjem fra Bagt med sit brød.
       </p>
+      <br>
       <p>
         Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i
         Nordsjælland og København. Visionerne er store, men missionen vil altid
@@ -85,7 +87,7 @@
             tætte relationer til vores gæster.
           </p></div>
         </div>
-        <img class="billede1" src="img/om/mel.jpg" alt="" />
+        <img class="mel" class="billede1" src="img/om/mel.jpg" alt="" />
         <div class="overskrift">
           <h3 id="link_footer6" >Vores værdier</h3>
         </div>
