--- a/om_bagt.html
+++ b/om_bagt.html
@@ -69,6 +69,7 @@
             ordentligt brød er en oplevelse, og det er dét, jeg gerne vil give
             gæsterne hos Bagt.” - Hans Schepelern
           </p>
+          <br />
         </div>
         <br />
       </section>
@@ -95,7 +96,7 @@
           </p>
         </div>
       </div>
-      <img class="mel" class="billede1" src="img/om/mel.jpg" alt="" />
+      <img id="mel" class="billede1" src="img/om/mel.jpg" alt="" />
       <div class="overskrift">
         <h3 id="link_footer6">Vores værdier</h3>
       </div>
