--- a/bestillinger.html
+++ b/bestillinger.html
@@ -13,17 +13,19 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <a href="index.html"><img src="logo.svg" alt="logo"></a>
+      <div class="grid_header">
+        <div class="logo">
+          <a href="index.html"><img src="logo.svg" alt="logo"></a>
+        </div>
+        <nav class="main-menu">
+         <button class="toggle-btn burger"></button>
+          <ul>
+            <li><a href="bestillinger.html"><strong>Bestillinger</strong></a></li>
+            <li><a href="om_bagt.html">Om Bagt</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-menu">
-        <button class="toggle-btn burger"></button>
-        <ul>
-          <li><a href="bestillinger.html"><strong>Bestillinger</strong></a></li>
-          <li><a href="om_bagt.html">Om Bagt</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
       <img class="top_pic" src="img/bestilling.webp" alt="">
