--- a/index.html
+++ b/index.html
@@ -11,34 +11,27 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet" />
     <meta name="robots" content="noindex" />
   </head>
   <body>
     <header>
-      <div class="logo">
-        <a href="index.html"><img src="logo.svg" alt="logo" /></a>
+      <div class="grid_header">
+        <div class="logo">
+          <a href="index.html"><img src="logo.svg" alt="logo" /></a>
+        </div>
+        <nav class="main-menu">
+          <button class="toggle-btn burger"></button>
+          <ul>
+            <li><a href="bestillinger.html">Bestillinger</a></li>
+            <li><a href="om_bagt.html">Om Bagt</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-menu">
-        <button class="toggle-btn burger"></button>
-        <ul>
-          <li><a href="bestillinger.html">Bestillinger</a></li>
-          <li><a href="om_bagt.html">Om Bagt</a></li>
-          <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
-      <video
-        controls
-        autoplay
-        muted
-        loop
-        src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"
-      ></video>
+      <video controls autoplay muted loop src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"></video>
       <section class="full usp">
         <div>
           <p>"Franskinspireret bageri med danske rødder.</p>
@@ -51,13 +44,8 @@
           <div>
             <h2>Lidt om os</h2>
             <p>
-              Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med
-              bæredygtighed for øje. Vi udfordrer os selv og udvikler vores
-              butikker, samt sortiment med det franske boulangerie som
-              inspirationskilde. Målet er at give vores gæster en autentisk
-              oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på
-              Frankrig. Vi stræber efter at give kærlig service, samt at opbygge
-              tætte relationer til vores gæster.
+              Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster
+              en autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
             </p>
           </div>
         </div>
@@ -66,13 +54,7 @@
         <h2>Vores butikker</h2>
         <div class="gallery">
           <div class="container">
-            <img
-              src="img/norrebro.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Nørrebros butik"
-            />
+            <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
             <h2 class="thumbnail">NØRREBRO</h2>
             <div class="ps">
               <p>Jagtvej 13</p>
@@ -81,13 +63,7 @@
             </div>
           </div>
           <div class="container">
-            <img
-              src="img/indreby.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Indre by butik"
-            />
+            <img src="img/indreby.webp" class="thumbnail" height="100" width="100" alt="Indre by butik" />
             <h2 class="thumbnail">INDRE BY</h2>
             <div class="ps">
               <p>Borgergade 130</p>
@@ -96,13 +72,7 @@
             </div>
           </div>
           <div class="container">
-            <img
-              src="img/hornbaek.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Hornbæk butik"
-            />
+            <img src="img/hornbaek.webp" class="thumbnail" height="100" width="100" alt="Hornbæk butik" />
             <h2 class="thumbnail">HORNBÆK</h2>
             <div class="ps">
               <p>Nordre Strandvej 339</p>
@@ -111,13 +81,7 @@
             </div>
           </div>
           <div class="container">
-            <img
-              src="img/gilleleje.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Gilleleje butik"
-            />
+            <img src="img/gilleleje.webp" class="thumbnail" height="100" width="100" alt="Gilleleje butik" />
             <h2 class="thumbnail">GILLELEJE</h2>
             <div class="ps">
               <p>Gilleleje Stationsvej 2.</p>
@@ -126,13 +90,7 @@
             </div>
           </div>
           <div class="container">
-            <img
-              src="img/helsingor.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Helsingør butik"
-            />
+            <img src="img/helsingor.webp" class="thumbnail" height="100" width="100" alt="Helsingør butik" />
             <h2 class="thumbnail">HELSINGØR</h2>
             <div class="ps">
               <p>Stengade 8</p>
@@ -142,13 +100,7 @@
             </div>
           </div>
           <div class="container">
-            <img
-              src="img/forhandlere.webp"
-              class="thumbnail"
-              height="100"
-              width="100"
-              alt="Forhandlere"
-            />
+            <img src="img/forhandlere.webp" class="thumbnail" height="100" width="100" alt="Forhandlere" />
             <h2 class="thumbnail">BAGT FORHANDLERE</h2>
             <div class="ps">
               <p>· Hej Humlebæk ·</p>
@@ -169,14 +121,8 @@
         </div>
         <div class="box">
           <h5>Sociale Medier</h5>
-          <a
-            href="https://www.instagram.com/bagt_boulangerie/"
-            class="instagram"
-            >Instagram</a
-          >
-          <a href="https://www.facebook.com/bagt.dk" class="facebook"
-            >Facebook</a
-          >
+          <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
+          <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
           <a
             href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
             class="linkedin"
