--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
       </div>
     </header>
     <main>
-      <video controls autoplay muted loop src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"></video>
+      <video
+        controls
+        autoplay
+        muted
+        loop
+        src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"
+      ></video>
       <section class="full usp">
         <div>
           <p>"Franskinspireret bageri med danske rødder.</p>
@@ -44,8 +50,10 @@
           <div>
             <h2>Lidt om os</h2>
             <p>
-              Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster
-              en autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
+              Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores
+              butikker, samt sortiment med det franske boulangerie som inspirationskilde. Målet er at give vores gæster en autentisk oplevelse hos
+              Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til
+              vores gæster.
             </p>
           </div>
         </div>
