--- a/om_bagt.html
+++ b/om_bagt.html
@@ -37,38 +37,49 @@
       <img class="billede1" src="img/bagtfacade.webp" alt="" />
       <div class="paragraf">
         <p>
-          Der er sket meget, siden det selvklæbende “til salg”-skilt blev fjernet fra bageriets vindue i Hornbæk i marts 2011 . Der er blevet købt, solgt, udvidet, bygget og revet ned - og der er blevet æltet, formet, smagt og bagt. Alt sammen for at
-          føre en drøm om et fransk bageri med danske rødder ud i livet.
+          Der er sket meget, siden det selvklæbende “til salg”-skilt blev fjernet fra bageriets vindue i Hornbæk i marts 2011 . Der er blevet købt,
+          solgt, udvidet, bygget og revet ned - og der er blevet æltet, formet, smagt og bagt. Alt sammen for at føre en drøm om et fransk bageri med
+          danske rødder ud i livet.
         </p>
         <br />
         <p>
-          Vores signatur-brød er det gode, lyse moffebrød, som vi bager efter fransk metode med surdej, masser af vand og langtidshævning. Det giver et godt brød med et blødt indre, der står i kontrast til en skorpe, der er så sprød, at man kan høre
-          den. Udtrykket er enkelt og rustikt - og man får mel på fingrene, når man går hjem fra Bagt med sit brød.
+          Vores signatur-brød er det gode, lyse moffebrød, som vi bager efter fransk metode med surdej, masser af vand og langtidshævning. Det giver
+          et godt brød med et blødt indre, der står i kontrast til en skorpe, der er så sprød, at man kan høre den. Udtrykket er enkelt og rustikt -
+          og man får mel på fingrene, når man går hjem fra Bagt med sit brød.
         </p>
         <br />
-        <p>Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i Nordsjælland og København. Visionerne er store, men missionen vil altid være den samme - At skabe bagværk af kvalitet med inspiration fra Frankrig.</p>
+        <p>
+          Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i Nordsjælland og København. Visionerne er store, men missionen vil
+          altid være den samme - At skabe bagværk af kvalitet med inspiration fra Frankrig.
+        </p>
       </div>
       <section class="full pink">
         <div>
           <br />
           <p>
-            “Jeg tænker tit på, at et brød er noget af det allermest basale og fundamentale i vores kost. Men derfor behøver det ikke at være kedeligt. Et brød kan også være det eneste, du husker fra et besøg på en fin restaurant. En sprød skorpe
-            eller brødets svampede midte fuld af store huller kan gøre brødet til noget mindeværdigt. Et ordentligt brød er en oplevelse, og det er dét, jeg gerne vil give gæsterne hos Bagt.” - Hans Schepelern
+            “Jeg tænker tit på, at et brød er noget af det allermest basale og fundamentale i vores kost. Men derfor behøver det ikke at være
+            kedeligt. Et brød kan også være det eneste, du husker fra et besøg på en fin restaurant. En sprød skorpe eller brødets svampede midte fuld
+            af store huller kan gøre brødet til noget mindeværdigt. Et ordentligt brød er en oplevelse, og det er dét, jeg gerne vil give gæsterne hos
+            Bagt.” - Hans Schepelern
           </p>
           <br />
         </div>
         <br />
       </section>
       <div class="paragraf">
-        <p>Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i Nordsjælland og København. Visionerne er store, men missionen vil altid være den samme - At skabe bagværk af kvalitet med inspiration fra Frankrig.</p>
+        <p>
+          Bagt har siden 2011 udviklet sig til 5 succesfulde butikker placeret i Nordsjælland og København. Visionerne er store, men missionen vil
+          altid være den samme - At skabe bagværk af kvalitet med inspiration fra Frankrig.
+        </p>
       </div>
       <img class="billede1" src="img/om/topview.webp" alt="" />
       <div class="overskrift">
         <h1>Vision</h1>
         <div class="paragraf">
           <p>
-            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
-            autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
+            Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker,
+            samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en autentisk oplevelse hos Bagt, hvorved vi
+            bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
           </p>
         </div>
       </div>
@@ -82,8 +93,14 @@
           <img class="gridbillede" src="img/om/latteart.webp" alt="" />
           <div>
             <h1 class="vaerdier">Kærlighed til Frankrig</h1>
-            <p>Bagt blev grundlagt med en drøm om at skabe et bagerunivers med et fransk præg. Indehaveren af Bagt har i mange år arbejdet i Paris, blandt andet i Maison du Danemark og Paul, hvor en stor del af inspirationen er opstået.</p>
-            <p>Vi er et fransk bageri med danske rødder. Derfor vil du kunne finde flere referencer til det franske boulangerie hos Bagt blandt andet gennem vores sortiment og æstetik.</p>
+            <p>
+              Bagt blev grundlagt med en drøm om at skabe et bagerunivers med et fransk præg. Indehaveren af Bagt har i mange år arbejdet i Paris,
+              blandt andet i Maison du Danemark og Paul, hvor en stor del af inspirationen er opstået.
+            </p>
+            <p>
+              Vi er et fransk bageri med danske rødder. Derfor vil du kunne finde flere referencer til det franske boulangerie hos Bagt blandt andet
+              gennem vores sortiment og æstetik.
+            </p>
             <p>Vi vil bringe Frankrig tættere på dig.</p>
           </div>
         </div>
@@ -93,11 +110,15 @@
           <div>
             <h1 class="vaerdier">Nærvær</h1>
             <p>
-              Hos Bagt har vi altid hjertet med i vores handlinger. Vi elsker at give vores gæster en helt særlig oplevelse, når de besøger Bagt. Vi nyder hverdagssamtalerne med vores stamgæster om det store og små såvel som at introducere Bagt for
-              helt nye gæster. Der er ikke noget bedre for os, end når vi kan give et smil med på vejen.
+              Hos Bagt har vi altid hjertet med i vores handlinger. Vi elsker at give vores gæster en helt særlig oplevelse, når de besøger Bagt. Vi
+              nyder hverdagssamtalerne med vores stamgæster om det store og små såvel som at introducere Bagt for helt nye gæster. Der er ikke noget
+              bedre for os, end når vi kan give et smil med på vejen.
             </p>
             <p>Vores relation til vores gæster, værdsætter vi derfor utroligt højt.</p>
-            <p>Udover at være nærværende over for vores gæster, værdsætter vi også et nærværende sammenhold i vores teams. En god arbejdsplads med gode kollegaer skaber fundamentet for den nærværende oplevelse hos</p>
+            <p>
+              Udover at være nærværende over for vores gæster, værdsætter vi også et nærværende sammenhold i vores teams. En god arbejdsplads med gode
+              kollegaer skaber fundamentet for den nærværende oplevelse hos
+            </p>
           </div>
           <img class="gridbillede" src="img/om/nærvær.webp" alt="" />
         </div>
@@ -110,8 +131,10 @@
           <div>
             <h1 class="vaerdier">Håndlavet kvalitet</h1>
             <p>
-              Hos Bagt sætter vi en dyd i at håndlave vores bagværk for at få et personligt præg uden at gå på kompromis med kvaliteten. Vi har signaturvarer som vores “moffebrød”, “Bagerens rugbrød” og “Croissant d’amande” som man kan kende os på.
-              Alt vores bagværk og kager håndlaves til mindste detalje af bagere og konditorer, der brænder for deres værk. Det er en investering i tid, som vi værdsætter frem for at overlade arbejdet til maskiner.
+              Hos Bagt sætter vi en dyd i at håndlave vores bagværk for at få et personligt præg uden at gå på kompromis med kvaliteten. Vi har
+              signaturvarer som vores “moffebrød”, “Bagerens rugbrød” og “Croissant d’amande” som man kan kende os på. Alt vores bagværk og kager
+              håndlaves til mindste detalje af bagere og konditorer, der brænder for deres værk. Det er en investering i tid, som vi værdsætter frem
+              for at overlade arbejdet til maskiner.
             </p>
           </div>
         </div>
@@ -121,10 +144,12 @@
           <div>
             <h1 class="vaerdier">Omtanke</h1>
             <p>
-              Vi stræber efter minimalt spild og har derfor lanceret tiltaget: “Less is more”. I de henseender, der ikke kan forudsiges, har vi tilrettelag initiativer til at nedbringe vores madspild. Hos Bagt kan man købe overskydende varer sidst på
-              dagen til en fordelagtig pris. Vi giver tips og tricks på vores sociale medier til, hvordan man kan give bagværk, der har mistet sin friskhed, nyt liv. Vores emballage er så vidt muligt af organisk materiale, og vi bestræber os på at
-              blive uafhængige af plastik. Stadig flere af vores råvarer er økologiske. Alt vores overskydende bagværk viderefordeles til NGO’er, der hjælper udsatte i det danske samfund. Vi vil altid have omtanken for øje i vores produktion og
-              daglige drift. Der sker konstant udviklinger på dette punkt!
+              Vi stræber efter minimalt spild og har derfor lanceret tiltaget: “Less is more”. I de henseender, der ikke kan forudsiges, har vi
+              tilrettelag initiativer til at nedbringe vores madspild. Hos Bagt kan man købe overskydende varer sidst på dagen til en fordelagtig
+              pris. Vi giver tips og tricks på vores sociale medier til, hvordan man kan give bagværk, der har mistet sin friskhed, nyt liv. Vores
+              emballage er så vidt muligt af organisk materiale, og vi bestræber os på at blive uafhængige af plastik. Stadig flere af vores råvarer
+              er økologiske. Alt vores overskydende bagværk viderefordeles til NGO’er, der hjælper udsatte i det danske samfund. Vi vil altid have
+              omtanken for øje i vores produktion og daglige drift. Der sker konstant udviklinger på dette punkt!
             </p>
           </div>
           <img class="gridbillede" src="img/om/stopmadspil.webp" alt="" />
@@ -137,8 +162,8 @@
             <h3>Depanneur</h3>
             <p>I vores kundekøler kan du kun få juice af den højeste kvalitet. Vi får nemlig vores juice fra Depanneur.</p>
             <p>
-              Juice fra Depanneur er produceret i samarbejde med en familiedrevet virksomhed som har specialiceret sig i organisk kvalitetsjuice siden 1974. Deres juice indeholder intet tilsat koncentrat, sukker eller konserveringsmidler. De er bare
-              ren organisk juice.
+              Juice fra Depanneur er produceret i samarbejde med en familiedrevet virksomhed som har specialiceret sig i organisk kvalitetsjuice siden
+              1974. Deres juice indeholder intet tilsat koncentrat, sukker eller konserveringsmidler. De er bare ren organisk juice.
             </p>
           </div>
           <div class="boks">
