--- a/kontakt.html
+++ b/kontakt.html
@@ -12,21 +12,23 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   </head>
   <body>
-      <header>
-        <div class="grid_header">
-          <div class="logo">
-            <a href="index.html"><img src="logo.svg" alt="logo"></a>
-          </div>
-          <nav class="main-menu">
-            <button class="toggle-btn burger"></button>
-            <ul>
-              <li><a href="bestillinger.html">Bestillinger</a></li>
-              <li><a href="om_bagt.html">Om Bagt</a></li>
-              <li><a href="kontakt.html"><strong>Kontakt</strong></a></li>
-            </ul>
-          </nav>
+    <header>
+      <div class="grid_header">
+        <div class="logo">
+          <a href="index.html"><img src="logo.svg" alt="logo" /></a>
         </div>
-      </header>
+        <nav class="main-menu">
+          <button class="toggle-btn burger"></button>
+          <ul>
+            <li><a href="bestillinger.html">Bestillinger</a></li>
+            <li><a href="om_bagt.html">Om Bagt</a></li>
+            <li>
+              <a href="kontakt.html"><strong>Kontakt</strong></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <main>
       <section class="section3">
         <h2 id="link_footer4">Vores butikker</h2>
@@ -53,9 +55,9 @@
             <img src="img/hornbaek.webp" alt="Butikken i Hornbæk" />
             <h3>Hornbæk</h3>
             <div class="ps">
-             <p>Nordre Strandvej 339</p>
-             <p>Tlf: 49 70 00 51</p>
-             <p>Alle dage: 6.30 - 17.30</p>
+              <p>Nordre Strandvej 339</p>
+              <p>Tlf: 49 70 00 51</p>
+              <p>Alle dage: 6.30 - 17.30</p>
             </div>
           </div>
           <div class="boks">
@@ -78,7 +80,7 @@
             </div>
           </div>
           <div class="boks_helligdag">
-            <h3>helligdage</h3 >
+            <h3>helligdage</h3>
             <div class="ps">
               <p>Se åbningstider for helligdage på vores instagram <a href="https://www.instagram.com/p/Cl-1BdyMwLM/">her.</a></p>
             </div>
@@ -121,13 +123,20 @@
         <div class="grid_job">
           <div class="boks_order">
             <h2>Bagt family</h2>
-            <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
-            <p> Du er altid velkommen til at sende en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
-            <p> Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
+            <p>
+              Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. Vi tror på, at det skal være sjovt
+              at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være.
+            </p>
+            <p>
+              Du er altid velkommen til at sende en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.
+            </p>
+            <p>
+              Send din ansøgning til <a href="mailto:job1@bagt.nu"><strong>job1@bagt.nu</strong></a>
+            </p>
             <p>Vi glæder os til at høre fra dig!</p>
           </div>
           <div class="boks">
-            <img src="img/job.webp" alt="Medarbejder hos Bagt">
+            <img src="img/job.webp" alt="Medarbejder hos Bagt" />
             <p class="stillinger">Gilleleje - Fuldtidsmedarbejdere søges</p>
             <p class="stillinger">Hornbæk - Fuldtidsmedarbejdere søges</p>
           </div>
@@ -140,38 +149,15 @@
         <div class="grid_kontakt">
           <div class="boks">
             <h3 id="link_footer">Mail</h3>
-              <address>
-                <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
-                <a href="mailto:engros@bagt.nu">engros@bagt.nu</a>
-                <a href="mailto:bestilling@bagt.nu">bestilling@bagt.nu</a>
-              </address>
+            <address>
+              <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
+              <a href="mailto:engros@bagt.nu">engros@bagt.nu</a>
+              <a href="mailto:bestilling@bagt.nu">bestilling@bagt.nu</a>
+            </address>
           </div>
           <div class="boks">
             <h3>Social</h3>
             <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
-            <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
-            <a href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps" class="linkedin"">LinkedIn</a>
-          </div>
-          <div class="boks">
-            <h3>App</h3>
-            <p>Download vores app og få eksklusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
-            </p>
-            <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
-            <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
-          </div>
-        </div>
-      </section>
-        <footer class="grid_1_1_1_1">
-          <div class="box">
-            <h5>Kontakt</h5>
-            <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
-            <a href="kontakt.html#link_footer4">Butikker</a> 
-          </div>
-          <div class="box">
-            <h5>Sociale Medier</h5>
-            <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram"
-              >Instagram</a
-            >
             <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
             <a
               href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
@@ -179,19 +165,46 @@
               >LinkedIn</a
             >
           </div>
-          <div class="box">
-            <h5>Om Bagt</h5>
-      <a href="om_bagt.html#link_footer5">Vores Historie</a>
-      <a href="om_bagt.html#link_footer6">Værdier og visioner</a>
+          <div class="boks">
+            <h3>App</h3>
+            <p>
+              Download vores app og få eksklusive fordele som loyalitetskunde. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen
+              point når du handler.
+            </p>
+            <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
+            <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
           </div>
-          <div class="box">
-            <h5>Bestillinger</h5>
-            <a href="bestillinger.html#link_footer1">Specialbestillinger</a>
-            <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
-          </div>
-        </footer>
+        </div>
+      </section>
+      <footer class="grid_1_1_1_1">
+        <div class="box">
+          <h5>Kontakt</h5>
+          <a href="kontakt.html#link_footer">Kontaktoplysninger</a>
+          <a href="kontakt.html#link_footer4">Butikker</a>
+        </div>
+        <div class="box">
+          <h5>Sociale Medier</h5>
+          <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
+          <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
+          <a
+            href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
+            class="linkedin"
+            >LinkedIn</a
+          >
+        </div>
+        <div class="box">
+          <h5>Om Bagt</h5>
+          <a href="om_bagt.html#link_footer5">Vores Historie</a>
+          <a href="om_bagt.html#link_footer6">Værdier og visioner</a>
+        </div>
+        <div class="box">
+          <h5>Bestillinger</h5>
+          <a href="bestillinger.html#link_footer1">Specialbestillinger</a>
+          <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
+        </div>
+      </footer>
     </section>
-      <script src="javascript/login.js"></script>
-      <script src="javascript/burgermenu.js"></script>
+    <script src="javascript/login.js"></script>
+    <script src="javascript/burgermenu.js"></script>
   </body>
 </html>
