--- a/bestillinger.html
+++ b/bestillinger.html
@@ -239,22 +239,22 @@
           <form>
             <div class="form_grid_1-1">
               <div class="form-felt">
-                <br /><label for="navn">Navn</label>>
+                <label for="navn"><br />Navn<br /></label>
                 <input id="navn" type="text" name="fname" />
               </div>
               <div class="form-felt-1">
-                <br /><label for="tel">Telefonnummer</label>>
+                <label for="tel"><br />Telefonnummer<br /></label>
                 <input id="tel" type="tel" name="Tlf. nummer" />
               </div>
             </div>
             <div class="form_grid_1-1">
               <div class="form-felt">
-                <br /><label for="email">Email</label>>
+                <label for="email"><br />Email<br /></label>
                 <input id="email" type="text" name="email" />
               </div>
               <div class="form_felt-2">
                 <label>
-                  <br />Vælg butik>
+                  <br />Vælg butik<br />
                   <select name="liste">
                     <option value="">Butik</option>
                     <option value="Hornbæk">Hornbæk</option>
@@ -267,12 +267,12 @@
               </div>
             </div>
             <div class="form-felt">
-              <br /><label for="emne">Emne</label>>
+              <label for="emne"><br />Emne<br /></label>
               <input id="emne" type="text" name="emne" />
             </div>
             <div class="form_felt">
               <label>
-                <br />Besked>
+                <br />Besked<br />
                 <textarea id="besked" name="besked" rows="10" cols="50"></textarea>
               </label>
             </div>
