--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
     <main>
       <!-- <video autoplay muted loop src="https://samilarsen.com/kea/05/bagt-film.mp4?fbclid=IwAR0xo0jsTt5tiMfkAeS_5OC24UucmXarFxd0CIeCbdzs-6Y7YJklwQYCDAA"></video> -->
-      <video width="100%" height="100%" autoplay loop>
-        <source src="bagt-film.mp4" type="video/mp4" />
+      <video width="100%" height="100%" autoplay controls loop>
+        <source src="/img/bagt-film.mp4" type="video/mp4" />
       </video>
       <section class="full usp">
         <div>
